GPS-214 Crear endpoint para borrar cuenta propia
